# configshell-fb

./: configshell  pyproject.toml  setup.py
configshell/: console.py  log.py  node.py  prefs.py  shell.py
configshell_fb/: __init__.py  node.py  shell.py  test.py
configshell_fb/node/: __init__.py  get.py
configshell_fb/node/cmds/: __init__.py  cd.py  help.py  ls.py
